[gd_scene load_steps=3 format=3 uid="uid://bkasene7ago0o"]

[ext_resource type="Script" uid="uid://quopgtcp7bkk" path="res://scenes/ui/level_end_menu.gd" id="1_mc1dg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mc1dg"]
bg_color = Color(0, 0, 0, 0.580392)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="LevelEndMenu" type="CanvasLayer"]
script = ExtResource("1_mc1dg")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Root"]
custom_minimum_size = Vector2(432, 222)
layout_mode = 0
offset_right = 432.0
offset_bottom = 222.0
theme_override_constants/margin_left = 96
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 96
theme_override_constants/margin_bottom = 24

[node name="Panel" type="Panel" parent="Root/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mc1dg")

[node name="VBoxContainer" type="VBoxContainer" parent="Root/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="CurrentTimeHBox" type="HBoxContainer" parent="Root/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CurrentTimeMajorLabel" type="Label" parent="Root/MarginContainer/VBoxContainer/CurrentTimeHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "00:00"
horizontal_alignment = 1

[node name="CurrentTimeMSLabel" type="Label" parent="Root/MarginContainer/VBoxContainer/CurrentTimeHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = ".000"

[node name="BestTimeHBox" type="HBoxContainer" parent="Root/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BestTimeMajorLabel" type="Label" parent="Root/MarginContainer/VBoxContainer/BestTimeHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "00:00"
horizontal_alignment = 1

[node name="BestTimeMSLabel" type="Label" parent="Root/MarginContainer/VBoxContainer/BestTimeHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = ".000"

[node name="HBoxContainer" type="HBoxContainer" parent="Root/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="RetryButton" type="Button" parent="Root/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 32)
layout_mode = 2
text = "Retry"

[node name="ReturnButton" type="Button" parent="Root/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 32)
layout_mode = 2
text = "Return"
